--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,7 +88,6 @@ html{
     height: 46px;
     background-color:rgb(0,10,255);
     z-index: 1;
-    overflow: hidden;
 }
 
 /* #header .search-btn{
@@ -230,7 +229,7 @@ html{
 #content .content-section {
     width: 800px;
     max-width: 100%;
-    padding: 75px 0 60px;
+    padding: 75px 0 50px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 16px;
@@ -254,8 +253,8 @@ html{
     line-height: 1.4;
     opacity: 0.9;
     width: 800px;
-    padding-left: 100px;
-    padding-right: 100px ;
+    padding-left: 15%;
+    padding-right: 15% ;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -321,7 +320,7 @@ html{
 }
 
 .games-list{
-    margin-top: 32px;
+    margin-top: 16px;
     padding-bottom: 32px;
 }
 
@@ -439,7 +438,7 @@ html{
 
 .section-contact h3{
     text-align: center;
-    padding-top: 45px;
+    padding-top: 80px;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 2px;
@@ -460,6 +459,15 @@ html{
 .contact-info i[class*="ti-"]{
     display: inline-block;
     width: 35px;
+}
+
+.contact-info a{
+    color: #101aef;
+    opacity: 0.8;
+}
+
+.contact-info a:hover{
+    opacity: 1;
 }
 
 .contact-form{
